# rust-template

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: checks.yaml  docker.yaml
src/: lib.rs  main.rs
tests/: hello.rs
