[package]
name = "rust-template"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8.9"
clap = { version = "4", features = ["env", "derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
